[package]
name = "errutil"
version = "0.1.0"
edition = "2021"
authors = ["Volker Kleinfeld <github.com/vfeld>"]
description = "A library to generate error information pointing to the source locations"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/vfeld/errutil"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", optional = true }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
thiserror = "1.0"

[features]
default = ["axum"]
axum = ["dep:axum"]
